[package]
name = "jsonc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6.3", features = ["serde"] }
serde_json = "1.0.83"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
